--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run build
 
       - name: Deploy AWS CDK Stack
-        run: "npx cdk deploy MyFirstCdkStack --ci --require-approval never --no-asset-metadata"
+        run: "npx cdk deploy AwsCdkProjectStack --ci --require-approval never --no-asset-metadata"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
